--- a/twig/page.twig
+++ b/twig/page.twig
@@ -13,7 +13,7 @@
     <div class="row">
         {% if all_pages %}
             <div class="col-12 col-lg-2">
-                <nav class="navbar-expand-lg d-block sticky docs-all-pages rounded-1 mt-3 mt-md-0">
+                <nav class="navbar-expand-lg d-block sticky-top rounded-1 mt-3 mt-md-0">
                     <a href="#" data-bs-toggle="collapse" data-bs-target="#allpages" class="d-lg-none align-middle">{{ svg('menu', 20) }}</a>
                     <span class="d-lg-none">Show pages</span>
                     <div class="collapse navbar-collapse mt-md-3" id="allpages">
@@ -38,7 +38,7 @@
 
         {% if links %}
             <div class="col-12 col-lg-{{ all_pages ? 2 : 3 }}">
-                <div class="sticky mt-3 mt-md-0">
+                <div class="sticky-top mt-3 mt-md-0">
                     <nav id="contents" class="nav flex-column d-block docs-contents rounded-1 mt-md-3">
                         <div class="title mb-0">Table of contents</div>
                         <ul class="list-unstyled mb-0">
