--- a/twig/404.twig
+++ b/twig/404.twig
@@ -8,8 +8,8 @@
 
 {% block body %}
     <div class="text-center">
-        <h1>404</h1>
-        <h2>The page you are looking for was not found.</h2>
+        <h1 style="font-size: 5rem;">404</h1>
+        <h4>The page you are looking for was not found.</h4>
         <a href="{{ config('site_url') }}">Back to Home</a>
     </div>
 {% endblock %}
