--- a/twig/page.twig
+++ b/twig/page.twig
@@ -4,7 +4,7 @@
 {% block description %}{{ description }}{% endblock %}
 {% block container_id %}page{% endblock %}
 {% block head_content %}
-    <link href="{{ path('assets/highlight.js/default.min.css') }}" rel="stylesheet">
+    <link href="{{ path('assets/highlight.js/vs.min.css') }}" rel="stylesheet">
     <script src="{{ path('assets/highlight.js/highlight.min.js') }}"></script>
     <script>hljs.highlightAll();</script>
 {% endblock %}
@@ -14,7 +14,11 @@
         {% if all_pages %}
             <div class="col-12 col-lg-2">
                 <nav class="navbar-expand-lg d-block sticky-top rounded-1 mt-3 mt-md-0">
-                    <a href="#" data-bs-toggle="collapse" data-bs-target="#allpages" class="d-lg-none align-middle">{{ svg('menu', 20) }}</a>
+                    <a href="#" data-bs-toggle="collapse" data-bs-target="#allpages" class="d-lg-none align-middle">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi" style="vertical-align: -.125em;" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path>
+                        </svg>
+                    </a>
                     <span class="d-lg-none">Show pages</span>
                     <div class="collapse navbar-collapse mt-md-3" id="allpages">
                         <ul class="list-unstyled mb-0 overflow-hidden">
@@ -22,7 +26,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link p-0 text-truncate{{ is_active('/' ~ link.path) ? ' text-dark' : '' }}" href="{{ link.url }}">
                                         {{ link.title|raw }}
-                                        {% if link.is_dir %}{{ svg('folder', 14) }}{% endif %}
+                                        {% if link.is_dir %}
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi" style="vertical-align: -.125em;" viewBox="0 0 16 16">
+                                                <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4H2.19zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707z"></path>
+                                            </svg>
+                                        {% endif %}
                                     </a>
                                 </li>
                             {% endfor %}
