--- a/twig/home.twig
+++ b/twig/home.twig
@@ -14,7 +14,7 @@
         {% if categories %}
             {% for cat in categories %}
                 <div class="col-xs-12 col-sm-6 col-lg-3 mb-4">
-                    <a href="{{ cat.url }}" class="card h-100 text-center">
+                    <a href="{{ cat.url }}" class="card h-100 text-center text-dark text-decoration-none">
                         <div class="card-body p-4 p-lg-5 d-flex flex-column justify-content-center">
                             <h4 class="card-title">{{ cat.title }}</h4>
                             <p>{{ cat.description|raw }}</p>
