--- a/twig/404.twig
+++ b/twig/404.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.twig' %}
 
-{% block page_title %}Not Found | {% endblock %}
+{% block page_title %}Not Found - {% endblock %}
 {% block container_id %}notfound{% endblock %}
 
 {% block body %}
