--- a/twig/page.twig
+++ b/twig/page.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.twig' %}
 
-{% block page_title %}{{ title }} | {% endblock %}
+{% block page_title %}{{ title }} - {% endblock %}
 {% block description %}{{ description }}{% endblock %}
 {% block container_id %}page{% endblock %}
 {% block head_content %}
