--- a/twig/category.twig
+++ b/twig/category.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.twig' %}
 
-{% block page_title %}{{ title }} | {% endblock %}
+{% block page_title %}{{ title }} - {% endblock %}
 {% block description %}{{ description }}{% endblock %}
 {% block container_id %}category{% endblock %}
 
