--- a/twig/home.twig
+++ b/twig/home.twig
@@ -6,7 +6,7 @@
     <div class="text-center mt-5 mb-5">
         <h1>{{ config('site_title') }}</h1>
         {% if config('site_description') %}
-            <p class="lead">{{ config('site_description') }}</p>
+            <p class="lead">{{ config('site_description')|raw }}</p>
         {% endif %}
     </div>
 
