--- a/twig/layout.twig
+++ b/twig/layout.twig
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>{% block page_title %}{% endblock %}{{ config('site_title') }}</title>
     {% if block('description') is defined %}
-        <meta name="description" content="{% block description %}{{ config('site_description') }}{% endblock %}">
+        <meta name="description" content="{% block description %}{{ config('site_description')|striptags }}{% endblock %}">
     {% endif %}
-    <meta name="keywords" content="{{ config('keywords') }}">
+    <meta name="keywords" content="{{ config('keywords')|join(',') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ path('assets/bootstrap/bootstrap.min.css') }}" rel="stylesheet">
     {% block head_content %}{% endblock %}
@@ -52,7 +52,7 @@
         {% block footer_content %}{% endblock %}
         <div class="container pt-4 pb-4 text-center">
             Copyright &copy; {{ 'now' | date('Y') }} All Rights Reserved.
-            Powered by <a href="https://github.com/RobiNN1/Markdown-Docs" target="_blank">Markdown-Docs</a>.{# Please don't delete this #}
+            Powered by <a href="https://github.com/RobiNN1/Markdown-Docs" target="_blank" rel="noopener">Markdown-Docs</a>.{# Please don't delete this #}
         </div>
     </footer>
 {% endblock %}
