--- a/twig/layout.twig
+++ b/twig/layout.twig
@@ -32,9 +32,7 @@
                         {% endif %}
                         <li class="nav-item ms-md-2 dropdown searchinput">
                         <input id="searchdocs" class="form-control dropdown-toggle" type="text" placeholder="Search docs..." data-bs-toggle="dropdown" aria-label="Search docs...">
-                        <ul class="dropdown-menu mt-1 w-100 h-auto" style="max-height: 18.75rem;overflow-x: hidden;" aria-labelledby="searchdocs" id="search_result">
-                            <li><span class="dropdown-header fw-bold text-truncate">Enter a search term to find results.</span></li>
-                        </ul>
+                        <ul class="dropdown-menu mt-1 w-100 h-auto" style="max-height: 18.75rem;overflow-x: hidden;" aria-labelledby="searchdocs" id="search_result"></ul>
                     </li>
                     </ul>
                 </div>
