--- a/twig/layout.twig
+++ b/twig/layout.twig
@@ -41,7 +41,7 @@
     </header>
 {% endblock %}
 
-<div class="container" id="{% block container_id %}page{% endblock %}">
+<div class="container" id="{% block container_id %}home{% endblock %}">
     {% block body %}{% endblock %}
 </div>
 
