--- a/twig/page.twig
+++ b/twig/page.twig
@@ -44,13 +44,13 @@
             <div class="mt-3">{{ content|raw }}</div>
         </div>
 
-        {% if contents %}
+        {% if toc %}
             <div class="col-12 col-lg-{{ all_pages ? 2 : 3 }}">
                 <div class="sticky-top mt-3 mt-md-0" style="z-index: inherit;">
                     <nav class="toc rounded-1 mt-md-3" aria-label="">
                         <div class="title mb-0">Table of contents</div>
                         <ul class="list-unstyled mb-0">
-                            {% for link in contents %}
+                            {% for link in toc %}
                                 <li>
                                     <a class="px-0 py-1 nav-link text-truncate" href="#{{ link.id }}">{{ link.title|raw }}</a>
                                 </li>
