--- a/twig/404.twig
+++ b/twig/404.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
     <div class="text-center">
-        <h1 style="font-size: 8rem;">404</h1>
+        <h1 class="text-9xl">404</h1>
         <a href="{{ config('site_url') }}">Back to Home</a>
     </div>
 {% endblock %}
