--- a/twig/home.twig
+++ b/twig/home.twig
@@ -3,25 +3,23 @@
 {% block container_id %}homepage{% endblock %}
 
 {% block body %}
-    <div class="text-center mt-5 mb-5">
+    <div class="text-center my-12">
         <h1>{{ config('site_title') }}</h1>
         {% if config('site_description') %}
-            <p class="lead">{{ config('site_description')|raw }}</p>
+            <p class="text-lg font-light">{{ config('site_description')|raw }}</p>
         {% endif %}
     </div>
 
-    <div class="row">
+    <div class="container lg:max-w-7xl mx-auto px-4">
         {% if categories %}
-            {% for cat in categories %}
-                <div class="col-xs-12 col-sm-6 col-lg-3 mb-4">
-                    <a href="{{ cat.url }}" class="card h-100 text-center text-dark text-decoration-none">
-                        <div class="card-body p-4 p-lg-5 d-flex flex-column justify-content-center">
-                            <h4 class="card-title">{{ cat.title }}</h4>
-                            <p>{{ cat.description|raw }}</p>
-                        </div>
+            <div class="grid grid-cols-4 gap-4">
+                {% for cat in categories %}
+                    <a class="block p-10 border text-center text-gray-900 hover:text-gray-600 bg-white hover:bg-gray-100" href="{{ cat.url }}">
+                        <h4 class="mb-4 text-lg font-bold">{{ cat.title }}</h4>
+                        <p>{{ cat.description|raw }}</p>
                     </a>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         {% else %}
             <div class="text-center">There is no content.</div>
         {% endif %}
