--- a/twig/layout.twig
+++ b/twig/layout.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:x-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <title>{% block page_title %}{% endblock %}{{ config('site_title') }}</title>
@@ -8,54 +8,68 @@
     {% endif %}
     <meta name="keywords" content="{{ config('keywords')|join(',') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{{ path('assets/bootstrap/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ path('assets/css/styles.css') }}" rel="stylesheet">
+    <script src="{{ path('assets/js/alpinejs.min.js') }}" defer></script>
     {% block head_content %}{% endblock %}
 </head>
-<body{% block body_attrs %}{% endblock %}>
+<body class="antialiased text-gray-900">
 {% block header %}
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="{{ config('site_url') }}">{{ config('logo')|replace({'{site_title}': config('site_title')})|raw }}</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainmenu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="mainmenu">
-                    <ul class="navbar-nav ms-auto">
+        <nav class="border-b mb-4 bg-white" x-data="{ toggleNav: false }">
+            <div class="container lg:max-w-7xl mx-auto px-4 py-4">
+                <div class="relative flex justify-between flex-col sm:flex-row">
+                    <div class="flex flex-1 justify-between">
+                        <a class="block py-2 px-1 font-bold text-black hover:text-gray-600" href="{{ config('site_url') }}">
+                            {{ config('logo')|replace({'{site_title}': config('site_title')})|raw }}
+                        </a>
+                        <button class="block py-2 px-1 text-gray-600 hover:text-black sm:hidden" type="button" @click="toggleNav = !toggleNav">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="sm:flex items-center justify-end" :class="{'block' : toggleNav, 'hidden' : !toggleNav}">
                         {% if config('nav_links') %}
                             {% for item in config('nav_links') %}
                                 {% set link = item.link|replace({'{site_url}': config('site_url')}) %}
-                                <li class="nav-item">
-                                    <a class="nav-link{{ is_active(link, true) ? ' active' : '' }}" href="{{ link }}">{{ item.title|raw }}</a>
-                                </li>
+                                <a class="block py-2 px-1 text-gray-{{ is_active(link, true) ? '800' : '600' }} hover:text-black" href="{{ link }}">
+                                    {{ item.title|raw }}
+                                </a>
                             {% endfor %}
                         {% endif %}
-                        <li class="nav-item ms-md-2 dropdown searchinput">
-                        <input id="searchdocs" class="form-control dropdown-toggle" type="text" placeholder="Search docs..." data-bs-toggle="dropdown" aria-label="Search docs...">
-                        <ul class="dropdown-menu mt-1 w-100 h-auto" style="max-height: 18.75rem;overflow-x: hidden;" aria-labelledby="searchdocs" id="search_result"></ul>
-                    </li>
-                    </ul>
+                        <div class="sm:ml-2 relative"
+                             x-data="{open: false,toggle() {if (this.open) {return this.close()}this.$refs.button.focus();this.open = true},
+                             close(focusAfter) {if (! this.open) return;this.open = false;focusAfter && focusAfter.focus();}}"
+                             x-on:keydown.escape.prevent.stop="close($refs.button)"
+                             x-on:focusin.window="! $refs.panel.contains($event.target) && close()"
+                             x-id="['dropdown-button']">
+                            <input x-ref="button" x-on:click="toggle()" :aria-expanded="open"
+                                   :aria-controls="$id('dropdown-button')"
+                                   class="outline-0 block w-full rounded py-[0.375rem] px-3 bg-white border focus:border-gray-400 appearance-none"
+                                   id="searchdocs" type="text" placeholder="Search..." aria-label="">
+                            <ul x-ref="panel" x-show="open" x-transition.origin.top.left x-on:click.outside="close($refs.button)" :id="$id('dropdown-button')"
+                                class="absolute bg-white rounded border w-full mt-2 shadow h-auto max-h-80 overflow-x-hidden" id="search_result"></ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
 {% endblock %}
 
-<div class="container" id="{% block container_id %}home{% endblock %}">
+<div class="container lg:max-w-7xl mx-auto px-4" id="{% block container_id %}home{% endblock %}">
     {% block body %}{% endblock %}
 </div>
 
 {% block footer %}
-    <footer class="sitefooter">
+    <footer class="container lg:max-w-7xl mx-auto px-4 py-4 text-center mt-4">
         {% block footer_content %}{% endblock %}
-        <div class="container pt-4 pb-4 text-center">
-            Copyright &copy; {{ 'now' | date('Y') }} All Rights Reserved.
-            Powered by <a href="https://github.com/RobiNN1/Markdown-Docs" target="_blank" rel="noopener">Markdown-Docs</a>.{# Please don't delete this #}
-        </div>
+        Copyright &copy; {{ 'now' | date('Y') }} All Rights Reserved.
+        Powered by
+        <a href="https://github.com/RobiNN1/Markdown-Docs" target="_blank" rel="noopener">Markdown-Docs</a>.{# Please don't delete this #}
     </footer>
 {% endblock %}
 <script>let SITEURL = '{{ config('site_url') }}';</script>
-<script src="{{ path('assets/bootstrap/bootstrap.bundle.min.js') }}"></script>
 <script src="{{ path('assets/js/scripts.js') }}"></script>
 </body>
 </html>
