--- a/twig/layout.twig
+++ b/twig/layout.twig
@@ -45,7 +45,7 @@
                              x-id="['dropdown-button']">
                             <input x-ref="button" x-on:click="toggle()" :aria-expanded="open"
                                    :aria-controls="$id('dropdown-button')"
-                                   class="outline-0 block w-full rounded py-[0.375rem] px-3 bg-white border focus:border-gray-400 appearance-none"
+                                   class="appearance-none bg-white border border-gray-400 rounded-md py-1 px-3 text-base leading-normal focus:outline-none focus:ring focus:ring-opacity-30 focus:ring-wave-500 focus:border-wave-400"
                                    id="searchdocs" type="text" placeholder="Search..." aria-label="">
                             <ul x-ref="panel" x-show="open" x-transition.origin.top.left x-on:click.outside="close($refs.button)" :id="$id('dropdown-button')"
                                 class="absolute bg-white rounded border w-full mt-2 shadow h-auto max-h-80 overflow-x-hidden" id="search_result"></ul>
