--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -15,7 +15,7 @@
 <body class="antialiased text-gray-900 bg-gray-50">
 {% block header %}
     <header>
-        <nav class="mb-4 bg-white" x-data="{ toggleNav: false }">
+        <nav class="mb-4 bg-white shadow-sm" x-data="{ toggleNav: false }">
             <div class="container lg:max-w-7xl mx-auto px-4 py-4">
                 <div class="relative flex justify-between flex-col sm:flex-row">
                     <div class="flex flex-1 justify-between">
