--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -57,8 +57,8 @@
     <footer class="container lg:max-w-7xl mx-auto px-4 py-4 text-center mt-4">
         {% block footer_content %}{% endblock %}
         Copyright &copy; {{ 'now'|date('Y') }} All Rights Reserved.
-        Powered by
-        <a href="https://github.com/RobiNN1/Markdown-Docs" target="_blank" rel="noopener">Markdown-Docs</a>.{# Please don't delete this #}
+        {# Please don't delete this #}
+        Powered by <a href="https://github.com/RobiNN1/phpMDocs" target="_blank" rel="noopener">phpMDocs</a>.
     </footer>
 {% endblock %}
 <script>let SITEURL = '{{ config('site_url') }}';</script>
