--- a/templates/page.twig
+++ b/templates/page.twig
@@ -13,7 +13,7 @@
     <div class="grid grid-cols-12 gap-4">
         {% if all_pages %}
             <div class="col-span-12 md:col-span-2">
-                <nav class="mt-3 md:mt-0" aria-label="" x-data="{ toggleSidebar: false }">
+                <nav class="mt-3 md:mt-0" x-data="{ toggleSidebar: false }">
                     <div class="flex items-center sm:hidden">
                         <button class="block text-gray-600 hover:text-black" type="button" @click="toggleSidebar = !toggleSidebar">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
@@ -48,7 +48,7 @@
 
         {% if toc %}
             <div class="col-span-12 md:col-span-2">
-                <nav class="rounded-1 mt-3 md:mt-0" aria-label="">
+                <nav class="rounded-1 mt-3 md:mt-0">
                     <div class="text-gray-500">Table of contents</div>
                     <ul>
                         {% for link in toc %}
