--- a/templates/home.twig
+++ b/templates/home.twig
@@ -14,7 +14,7 @@
         {% if categories %}
             <div class="md:grid md:grid-cols-3 md:gap-4 lg:grid-cols-4">
                 {% for cat in categories %}
-                    <a class="block p-10 text-center text-gray-900 hover:text-gray-600 hover:bg-gray-100 rounded bg-white shadow-sm shadow-gray-300" href="{{ cat.url }}">
+                    <a class="block p-10 text-center text-gray-900 hover:text-gray-600 hover:bg-gray-100 rounded-sm bg-white shadow-xs shadow-gray-300" href="{{ cat.url }}">
                         <h4 class="mb-4 text-lg font-bold">{{ cat.title }}</h4>
                         <p>{{ cat.description|raw }}</p>
                     </a>
