--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -15,7 +15,7 @@
 <body class="antialiased text-gray-900 bg-gray-50">
 {% block header %}
     <header>
-        <nav class="mb-4 bg-white shadow-sm" x-data="{ toggleNav: false }">
+        <nav class="mb-4 bg-white shadow-xs" x-data="{ toggleNav: false }">
             <div class="container lg:max-w-7xl mx-auto px-4 py-4">
                 <div class="relative flex justify-between flex-col sm:flex-row">
                     <div class="flex flex-1 justify-between">
@@ -39,8 +39,8 @@
                         {% endif %}
                         <div class="sm:ml-2 relative" x-data="{ ddmshow: false }" @click.away="ddmshow = false">
                             <input @click="ddmshow = ! ddmshow" id="searchdocs" type="text" placeholder="Search..." aria-label=""
-                                   class="w-full appearance-none placeholder-gray-400 leading-normal py-2 px-3 bg-white rounded text-gray-600 text-sm border border-gray-300 focus:outline-none focus:ring focus:ring-sky-100 focus:border-sky-300">
-                            <ul x-show="ddmshow" class="absolute bg-white rounded border min-w-full mt-2 shadow h-auto max-h-80 overflow-x-hidden right-0 left-auto" id="search_result"></ul>
+                                   class="w-full appearance-none placeholder-gray-400 leading-normal py-2 px-3 bg-white rounded-sm text-gray-600 text-sm border border-gray-300 focus:outline-hidden focus:ring-3 focus:ring-sky-100 focus:border-sky-300">
+                            <ul x-show="ddmshow" class="absolute bg-white rounded-sm border border-gray-200 min-w-full mt-2 shadow-sm h-auto max-h-80 overflow-x-hidden right-0 left-auto" id="search_result"></ul>
                         </div>
                     </div>
                 </div>
